target_sources(${LIB_FSFW_NAME} 
	PRIVATE 
		Clock.cpp
		FixedTimeslotTask.cpp
		MessageQueue.cpp
		Mutex.cpp
		MutexFactory.cpp
		PeriodicTask.cpp
		QueueFactory.cpp
		QueueMapManager.cpp
		SemaphoreFactory.cpp
		TaskFactory.cpp
)

if(UNIX)
	target_link_libraries(${LIB_FSFW_NAME} 
	PRIVATE
		pthread
		rt
	)
endif()