target_sources(${LIB_FSFW_NAME} PRIVATE version.cpp)

# Core

add_subdirectory(action)
add_subdirectory(cfdp)
add_subdirectory(container)
add_subdirectory(controller)
add_subdirectory(datapool)
add_subdirectory(datapoollocal)
add_subdirectory(devicehandlers)
add_subdirectory(events)
add_subdirectory(fdir)
add_subdirectory(globalfunctions)
add_subdirectory(health)
add_subdirectory(housekeeping)
add_subdirectory(internalerror)
add_subdirectory(ipc)
add_subdirectory(memory)
add_subdirectory(modes)
add_subdirectory(objectmanager)
add_subdirectory(parameters)
add_subdirectory(power)
add_subdirectory(serialize)
add_subdirectory(serviceinterface)
add_subdirectory(storagemanager)
add_subdirectory(subsystem)
add_subdirectory(tasks)
add_subdirectory(tcdistribution)
add_subdirectory(thermal)
add_subdirectory(timemanager)
add_subdirectory(tmtcpacket)
add_subdirectory(tmtcservices)
add_subdirectory(filesystem)

# Optional

if(FSFW_ADD_MONITORING)
  add_subdirectory(monitoring)
endif()
if(FSFW_ADD_PUS)
  add_subdirectory(pus)
endif()
if(FSFW_ADD_TMSTORAGE)
  add_subdirectory(tmstorage)
endif()
if(FSFW_ADD_COORDINATES)
  add_subdirectory(coordinates)
endif()
if(FSFW_ADD_RMAP)
  add_subdirectory(rmap)
endif()
if(FSFW_ADD_DATALINKLAYER)
  add_subdirectory(datalinklayer)
endif()

# OSAL

add_subdirectory(osal)
